// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders correctly when checked 1`] = `
<TouchableOpacity
  onPress={[MockFunction]}
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <Icon
    color="#F56522"
    id="checkboxMark"
  />
  <PeachText
    style={
      [
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
          "paddingLeft": 4,
        },
        false,
      ]
    }
  >
    21 Million
  </PeachText>
</TouchableOpacity>
`;

exports[`Checkbox renders correctly when unchecked 1`] = `
<TouchableOpacity
  onPress={[MockFunction]}
  style={
    [
      undefined,
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <Icon
    color="#9F8C82"
    id="square"
  />
  <PeachText
    style={
      [
        {
          "fontFamily": "Baloo2-SemiBold",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 28,
          "paddingLeft": 4,
        },
        {
          "color": "#BAADA7",
        },
      ]
    }
  >
    21 Million
  </PeachText>
</TouchableOpacity>
`;
